--- a/Workload/deployment-dotnetconsoleapp.yaml
+++ b/Workload/deployment-dotnetconsoleapp.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-deployment
+  name: app-deployment-2
   labels:
-    app: app-deployment
+    app: app-deployment-2
 spec:
-  replicas: 2
+  replicas: 10
   selector:
     matchLabels:
-      app: dotnetapp
+      app: dotnetapp-v2
   template:
     metadata:
       labels:
-        app: dotnetapp
+        app: dotnetapp-v2
     spec:
       containers:
-      - name: consoleapp
-        image: workloadcontainerregistry.azurecr.io/dotnetconsoleapp:v1
+      - name: weatherconsole
+        image: workloadcontainerregistry.azurecr.io/dotnetconsoleapp:ubuntuv1.1
